# audiowire

./: .gitignore  .travis.yml  README.md  index.html  main.py  requirements.txt  settings.py  setup.cfg  setup.py  web.py  weui.html
audiowire/: __init__.py  __main__.py  index.html  settings.py  web.py  weui.html
audiowire/static/: pcm-player.js  reconnecting-websocket.js
static/: pcm-player.js  pcmplayer2.js
