[metadata]
name = audiowire
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Listen PC sound from your phone
license = GPL2.0
# description-file = README.md
# home-page = 
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	audiowire

[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts = 
    audiowire = audiowire:main
